# Paper-Agentic

./: .gitignore  CLAUDE.md  FRONTEND_OPTIMIZATION_PLAN.md  README.md  TODO.md  UI_FIX_LIST.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent_layer/contracts/: __init__.py  content_block.py  query.py  source_card.py  sse_events.py  used_inputs.py
backend/app/agent_layer/hooks/: __init__.py  compact.py  reflection.py
backend/app/agent_layer/orchestration/: __init__.py  tool_loop.py  turn_runner.py
backend/app/agent_layer/planning/: __init__.py  input_assembler.py  retrieval_gate.py  snapshot_builder.py
backend/app/agent_layer/response/: __init__.py  answer_generator.py  block_streamer.py  citation_resolver.py  source_mapper.py
backend/app/agent_layer/runtime/: __init__.py  chat_model.py  token_budget.py
backend/app/agent_layer/session/: __init__.py  editor_context_store.py  persistence.py  redis_runtime.py  window_store.py
backend/app/clients/: embedding_client.py  mineru_client.py  vlm_client.py
backend/app/core/: config.py  errors.py
backend/app/data_layer/: __init__.py
backend/app/data_layer/contracts/: conversation.py  errors.py  library_item.py
backend/app/data_layer/data_persistence/: document_service.py
backend/app/data_layer/storage/: document_service.py
backend/app/models/: query.py
backend/app/pipelines/ingestion/: backup_manager.py  image_handler.py
backend/app/pipelines/retrieval/: service.py
backend/app/service_layer/api/: assistant_routes.py  config_routes.py  conversation_routes.py  errors.py  exception_mapping.py  health_routes.py  import_routes.py  library_routes.py  model_routes.py  papers_routes.py  query_routes.py  router.py
backend/app/service_layer/bootstrap/: app_factory.py  container.py  import_monitor.py  lifespan.py  logging.py
backend/app/service_layer/config/: settings.py
backend/app/service_layer/schemas/: assistant.py  conversation.py  library.py  model.py
backend/app/service_layer/sse/: encoder.py  import_progress_bus.py
backend/app/stores/: bm25_store.py  sqlite_repo.py
backend/app/utils/: error_handler.py  rate_limiter.py
backend/scripts/: batch_import.py
backend/test_backend/: README.md
backend/test_backend/fixtures/: README.md
backend/tests/: .gitignore  README.md
backend/tests/fixtures/: README.md
backend/tests/integration/: conftest.py
project/MVP/backend/: .env.example  .gitignore  Dockerfile  INGEST_DESIGN.md  main.py  pyproject.toml  start.sh  test_clean.py  test_clean_batch.py  test_full_batch.py  test_full_ingest.py  test_query_rewrite.py  test_retrieval.py
(+830 files in other folders)
