[project]
name = "paper-assistant-v1"
version = "0.1.0"
description = "论文助手"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.42.0",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.48",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "chromadb>=1.5.8",
    # PDF 处理链路
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test_backend"]

