[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
